<resources>
    <string name="app_name">MyCOVIDFinanceApp</string>
    <!-- page titles -->
    <string name="title_home">Home</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_budget">Budget</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_settings">Settings</string>

    <!-- home -->
    <string name="Welcome_Message">Welcome!</string>
    <string name="home_summary_title">Account Summary</string>

    <!-- accounts -->
    <string name="accounts_checking">Checking</string>
    <string name="accounts_savings">Savings</string>
    <string name="accounts_credit">Credit</string>
    <string name="accounts_balance">Balance</string>


    <!-- budget -->

    <!-- transaction -->
    <string name="transactions_title">All Transactions</string>

    <!-- settings -->
    <string name="settings_profile">Profile Settings</string>
    <string name="settings_view">View Settings</string>
    <string name="account_summary">Account Summary</string>
    <string name="month_at_a_glance">Month at a Glance</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="upcoming_payments">Upcoming Payments</string>
    <string name="budget_plans">Budget Plans</string>
    <string name="weekly_spending">Weekly Spending</string>
    <string name="self_destruct">Self Destruct</string>
    <string name="categories_empty">Empty</string>
    <string name="statistics">Statistics</string>
    <string name="total_expenses_per_category">Total Expenses Per Category</string>
    <string name="no_chart_data">No Chart Data</string>
    <string name="categories_percentage">Categories Percentage</string>
    <string name="categories">Categories</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="total">Total</string>
    <string name="add_new_expense">Add New Expense</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="cancel">Cancel</string>
    <string name="total">Total</string>

</resources>
