<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/"
        android:title="@string/title_accounts" />

    <item
        android:id="@+id/navigation_budget"
        android:icon="@drawable/"
        android:title="@string/title_budget" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/"
        android:title="@string/title_settings" />
</menu>
