<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mycovidfinanceapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_accounts"
        android:name="com.example.mycovidfinanceapp.ui.accounts.AccountsFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/fragment_accounts" />

    <fragment
        android:id="@+id/navigation_budget"
        android:name="com.example.mycovidfinanceapp.ui.budget.BudgetFragment"
        android:label="@string/title_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.example.mycovidfinanceapp.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.mycovidfinanceapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
