<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:gravity="center"
        android:textColor="@color/colorAppLightBlue"
        android:lineSpacingExtra="5dp"
        android:text="@string/add_new_expense"
        android:textSize="20sp"
        android:layout_marginTop="20dp" />

    <Spinner
        android:id="@+id/sp_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorPrimary"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_optional"
            android:layout_marginTop="20dp"
            android:maxLines="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/colorAgustinsFavorite"
            android:inputType="TODO"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="end"
        android:layout_height="wrap_content" >

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/et_total"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:hint="@string/total"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/save" />
    </LinearLayout>

</LinearLayout>