<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="@string/statistics"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="wrap_content">

        <!--<include layout="@layout/layout_date_range"/>-->

        <TextView
            android:id="@+id/tv_expenses_per_category"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/total_expenses_per_category"
            android:textSize="14sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="10dp">

            <TextView
                android:id="@+id/tv_bar_chart_category_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_chart_data"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bc_categories"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

        </FrameLayout>

        <TextView
            android:id="@+id/tv_category_percentage"
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/categories_percentage"
            android:textSize="14sp" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="10dp">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pc_categories"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_pie_categories_chart_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/no_chart_data"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>