<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.budget.BudgetFragment">

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sec_margins"
        android:background="@drawable/bkg_sec"
        android:padding="@dimen/sec_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_month"
            android:text="@string/month_at_a_glance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/elem_margins"
            android:textAlignment="center"
            android:textSize="@dimen/font_head"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sec_margins"
        android:background="@drawable/bkg_sec"
        android:padding="@dimen/sec_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4"
        >

        <TextView
            android:id="@+id/textView5"
            android:text="@string/budget_plans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/elem_margins"
            android:textAlignment="center"
            android:textSize="@dimen/font_head"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/weekly_spending"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sec_margins"
        android:background="@drawable/bkg_sec"
        android:padding="@dimen/sec_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

        <TextView
            android:id="@+id/textView6"
            android:text="@string/weekly_spending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/elem_margins"
            android:textAlignment="center"
            android:textSize="@dimen/font_head"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>