<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

<!--    <TextView-->
<!--        android:id="@+id/text_home"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="8dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:textAlignment="center"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <FrameLayout
        android:id="@+id/Welcome_Message"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="@drawable/bkg_welcome"
        android:padding="@dimen/sec_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        >

        <TextView
            android:id="@+id/Welcome_Message_Text"
            android:text="@string/Welcome_Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/elem_margins"
            android:textAlignment="center"
            android:textSize="@dimen/font_welc"
            android:textColor="#FFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </FrameLayout>



    <FrameLayout
        android:id="@+id/Account_Summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sec_margins"
        android:background="@drawable/bkg_sec"
        android:padding="@dimen/sec_padding"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Welcome_Message"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            >

            <TextView
                android:id="@+id/Account_Summary_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/elem_margins"
                android:text="@string/account_summary"
                android:textAlignment="center"
                android:textSize="@dimen/font_head"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ListView
                android:id="@+id/accountslist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/Account_Summary_Title" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/Monthly_View"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sec_margins"
        android:background="@drawable/bkg_sec"
        android:padding="@dimen/sec_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/Account_Summary"
        >

        <TextView
            android:id="@id/text_month"
            android:text="@string/month_at_a_glance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/elem_margins"
            android:textAlignment="center"
            android:textSize="@dimen/font_head"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/Recent_Transactions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sec_margins"
        android:background="@drawable/bkg_sec"
        android:padding="@dimen/sec_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/Monthly_View"
        >

        <TextView
            android:id="@+id/Recent_Transactions_Title"
            android:text="@string/recent_transactions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/elem_margins"
            android:textAlignment="center"
            android:textSize="@dimen/font_head"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/Upcoming_Payments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sec_margins"
        android:background="@drawable/bkg_sec"
        android:padding="@dimen/sec_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/Recent_Transactions"
        >

        <TextView
            android:id="@+id/Upcoming_Payments_Title"
            android:text="@string/upcoming_payments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/elem_margins"
            android:textAlignment="center"
            android:textSize="@dimen/font_head"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>